--- a/src/sass/_weatherCurrent.scss
+++ b/src/sass/_weatherCurrent.scss
@@ -8,7 +8,6 @@
   padding: 0 4rem;
   border-right: var(--border);
 
-  overflow-y: scroll;
   position: relative;
 
   @media only screen and (max-width: $bp-medium) {
