--- a/src/sass/_weatherFuture.scss
+++ b/src/sass/_weatherFuture.scss
@@ -43,7 +43,7 @@
       align-self: end;
       color: var(--color-dark);
       font-size: 1.5rem;
-      font-weight: 700;
+      font-weight: 600;
     }
 
     .temp {
